# Analise-Dados_Vlabs-Cin

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile
data/: cnj-movimentos-tree.json
docs/: CHECKLIST.md
notebooks/: Analise_Detalhada.ipynb  Analise_Parcial.ipynb  Analise_inicial.ipynb  teste2.ipynb
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: model.py
src/visualization/: filters.py  graphs.py  load_Data.py  visualize.py
