[tool.poetry]
name = "cs-intro-data-analysis"
version = "0.1.0"
description = "Projeto base para Data Science"
authors = ["jvras <jvras@cin.ufpe.br>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
pm4py = "^2.7.11.13"
polars = "^1.5.0"
streamlit = "^1.37.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
ipykernel = "^6.29.4"
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
