[tool.poetry]
name = "cs-intro-data-analysis"
version = "0.1.0"
description = "Projeto base para Data Science"
authors = ["jvras <jvras@cin.ufpe.br>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
pm4py = "^2.7.11.13"
polars = "^1.5.0"
streamlit = "^1.37.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
ipykernel = "^6.29.4"
notebook = "^7.1.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations', 'notebooks']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
